# anti666-random-experiments

./: .gitignore
low-poly-models/0001/: challenge.md  na16.gpl  onward.blend  reference.md
low-poly-models/0003/: elevator.blend
low-poly-models/palette2texture/: Cargo.toml  README.md
low-poly-models/palette2texture/src/: converter.rs  lib.rs  palette2texture.rs
osx-opengl-0001/osx-gl-0001/osx-gl-0001/: AppDelegate.h  AppDelegate.m  Info.plist  MainWindow.h  MainWindow.m  OpenGLView.h  OpenGLView.m  main.m
osx-opengl-0001/osx-gl-0001/osx-gl-0001.xcodeproj/: project.pbxproj
osx-opengl-0001/osx-gl-0001/osx-gl-0001.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
osx-opengl-0001/osx-gl-0001/osx-gl-0001/Base.lproj/: MainMenu.xib
